--- a/index.html
+++ b/index.html
@@ -3,14 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Project-1</title>
-  <meta name="description" content="">
+  <title>Stydy Aider</title>
+  <link href="https://www.studyaider.com/favicon.ico" rel="icon" type="image/x-icon"/>
+  <meta name="description" content="Education Website">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content=""> -->
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
@@ -220,7 +217,7 @@
                   <div class="post-content latest-post-content">
                     <ul class="post-meta latest-post-meta">
                       <li><i class="fa fa-calendar"></i> 13th Jun 2018</li>
-                      <li><a href="#"><i class="fas fa-comment"></i> 53</a></li>
+                      <li><a href="#"><i class="fas fa-user"></i> Author</a></li>
                       <li><a href="#"><i class="fas fa-eye"></i> view</a></li>
                       </ul>
                     <div class="post-title latest-post-title">
@@ -238,7 +235,7 @@
                   <div class="post-content latest-post-content">
                     <ul class="post-meta latest-post-meta">
                       <li><i class="fa fa-calendar"></i> 13th Jun 2018</li>
-                      <li><a href="#"><i class="fas fa-comment"></i> 53</a></li>
+                      <li><a href="#"><i class="fas fa-user"></i> Author</a></li>
                       <li><a href="#"><i class="fas fa-eye"></i> view</a></li>
                       </ul>
                     <div class="post-title latest-post-title">
@@ -256,7 +253,7 @@
                   <div class="post-content latest-post-content">
                     <ul class="post-meta latest-post-meta">
                       <li><i class="fa fa-calendar"></i> 13th Jun 2018</li>
-                      <li><a href="#"><i class="fas fa-comment"></i> 53</a></li>
+                      <li><a href="#"><i class="fas fa-user"></i> Author</a></li>
                       <li><a href="#"><i class="fas fa-eye"></i> view</a></li>
                       </ul>
                     <div class="post-title latest-post-title">
@@ -274,7 +271,7 @@
                   <div class="post-content latest-post-content">
                     <ul class="post-meta latest-post-meta">
                       <li><i class="fa fa-calendar"></i> 13th Jun 2018</li>
-                      <li><a href="#"><i class="fas fa-comment"></i> 53</a></li>
+                      <li><a href="#"><i class="fas fa-user"></i> Author</a></li>
                       <li><a href="#"><i class="fas fa-eye"></i> view</a></li>
                       </ul>
                     <div class="post-title latest-post-title">
